--- a/BL/External/Assets/MapTemplate.html
+++ b/BL/External/Assets/MapTemplate.html
@@ -4,8 +4,6 @@
     <title>Leaflet Map with Driving Route</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
         #map { height: 100vh; width: 100%; }
@@ -18,12 +16,10 @@
 <!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-    // Replace these with real coordinates
-    const startLat = {{startLat}}; // e.g. 52.5200 for Berlin
-    const startLon = {{startLon}}; // e.g. 13.4050
-    const endLat = {{endLat}};     // e.g. 48.8566 for Paris
-    const endLon = {{endLon}};     // e.g. 2.3522
-
+    const startLat = {{startLat}}; 
+    const startLon = {{startLon}};
+    const endLat = {{endLat}};     
+    const endLon = {{endLon}};     
     const map = L.map('map').setView([(startLat + endLat) / 2, (startLon + endLon) / 2], 5);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -33,7 +29,6 @@
     L.marker([startLat, startLon]).addTo(map);
     L.marker([endLat, endLon]).addTo(map);
 
-    // OSRM API URL
     const url = `https://router.project-osrm.org/route/v1/driving/${startLon},${startLat};${endLon},${endLat}?overview=full&geometries=geojson`;
 
     fetch(url)
